# azurecomputervisiontest

./: pyproject.toml  test1.py  test3.py  testmpl.py
