[tool.poetry]
name = "test1"
version = "0.1.0"
description = ""
authors = ["Raul Huertas"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
opencv-python = "^4.10.0.84"
numpy = "^2.2.1"
matplotlib = "^3.10.0"
tqdm = "^4.67.1"
pillow = "^11.0.0"
openai = "^1.58.1"
anthropic = "^0.42.0"
pymupdf = "^1.25.1"
azure-identity = "^1.19.0"
requests = "^2.32.3"
pdf2image = "^1.17.0"
poppler-utils = "^0.1.0"
python-dotenv = "^1.0.1"
azure-ai-vision-imageanalysis = "^1.0.0"
torch = "^2.5.1"
torchvision = "^0.20.1"
transformers = "^4.47.1"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

